--- a/src/GiftList/GiftList.css
+++ b/src/GiftList/GiftList.css
@@ -47,6 +47,7 @@
     justify-content: center;
     border-radius: 0 5px 5px 0;
     background-color: #C8AC98;
+    border: none;
     width: 6.5vh;
     color: #7C6B62;
 }
