--- a/src/GiftItem/GiftItem.css
+++ b/src/GiftItem/GiftItem.css
@@ -23,7 +23,7 @@
     display: flex;
     align-items: center;
     font-size: 4vh;
-    font-family: "Roboto Light", sans-serif;
+    font-family: "Roboto Mono Light";
     flex-grow: 1;
     padding-left: 3vw;
 }
@@ -38,3 +38,9 @@
     font-size: 3vh;
     color: #325f72;
 }
+
+@font-face {
+    font-family: "Roboto Mono Light";
+    src: url("../fonts/RobotoMono-Light.ttf");
+}
+
