--- a/src/GiftList/GiftList.css
+++ b/src/GiftList/GiftList.css
@@ -32,7 +32,7 @@
     border-radius: 5px 0 0 5px;
     flex-grow: 1;
     padding-left: 2vh;
-    font-family: "Roboto Medium", sans-serif;
+    font-family: "Roboto Regular";
     font-size: 3vh;
     color: #7C6B62;
 }
@@ -52,3 +52,7 @@
     color: #7C6B62;
 }
 
+@font-face {
+    font-family: "Roboto Regular";
+    src: url("../fonts/Roboto-Regular.ttf");
+}
