--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     width: 100vw;
     height: 20vh;
-    background: #325f72;
+    background: #252526;
     box-shadow: 0 1px 4px -2px black;
 }
 
