--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 100vh;
     width: 100vw;
-    background: #f38d8e;
+    background: #1e1e1e;
     flex-direction: column;
     align-items: center;
 }
