--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background: #1e1e1e;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 
