--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -11,10 +11,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #ffffff;
+    color: #4EC9B0;
     width: 40vw;
     box-sizing: border-box;
-    padding: 4vh;
+    padding: 6vh;
 }
 
 .headerName-line1 {
@@ -41,25 +41,27 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 2vh;
+    padding-top: 4vh;
+    padding-right: 6vh;
 }
 
 .myPeopleButton {
     background: none;
     font-family: "Roboto Light";
-    font-size: 3vh;
+    font-size: 2.5vh;
     color: #ffffff;
     border: none;
 }
 
 .rightArrowIcon {
-    font-size: 2.5vh;
+    font-size: 2vh;
 }
 
 .actions {
     display: flex;
     flex-direction: row;
-    padding: 1vh 2vh;
+    padding-right: 6vh;
+    padding-bottom: 2vh;
     justify-content: flex-end;
 }
 
