Fix margins when resizing

--- a/src/GiftItem/GiftItem.css
+++ b/src/GiftItem/GiftItem.css
@@ -9,12 +9,11 @@
 
 .pinIcon {
     display: flex;
-    align-items: center;
     justify-content: center;
     border: none;
     background: none;
-    flex-grow: 0.05;
     font-size: 2.5vh;
+    max-width: 10vh;
     color: #99b8b4;
     /* border: 1px solid; */
 }
@@ -22,22 +21,12 @@
 .giftName {
     display: flex;
     align-items: center;
-    font-size: 3.5vh;
+    font-size: 2.5vh;
     font-family: "Roboto Mono Light";
     flex-grow: 1;
     color: #569CD6;
     padding-left: 2vh;
-}
-
-.menuIcon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: none;
-    flex-grow: 0.05;
-    font-size: 3vh;
-    color: #569CD6;
-    border: none;
+    /* border: 1px solid; */
 }
 
 @font-face {
